[gd_scene load_steps=3 format=3 uid="uid://bbejghg7onb6v"]

[ext_resource type="Script" path="res://scenes/universal_menu.gd" id="1_q5vs4"]
[ext_resource type="Theme" uid="uid://cybssocn771kw" path="res://theme.tres" id="1_x0fex"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_q5vs4")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -103.0
offset_right = 52.5
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_x0fex")

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Continue"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Load game"

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New game"

[node name="MultiplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Multiplayer"

[node name="HallOfFameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Hall of Fame"

[node name="QuitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
